--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "@trycourier/courier": "^2.3.0",
     "next": "^11.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "twitch": "^4.5.5",
+    "twitch-auth": "^4.5.5"
   }
 }
