--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@trycourier/courier": "^2.3.0",
+    "mongodb": "^3.6.9",
     "next": "^11.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
