--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^11.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "saslprep": "^1.0.3",
     "twitch": "4.5.5",
     "twitch-auth": "4.5.5"
   }
