--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "export": "next export"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "@twurple/api": "^5.0.9",
+    "@twurple/auth": "^5.0.9",
+    "axios": "^0.24.0",
     "discord.js": "^12.5.3",
-    "mongodb": "^3.6.9",
-    "next": "^11.0.0",
+    "mongodb": "^3.7.3",
+    "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "saslprep": "^1.0.3",
-    "twitch": "4.5.5",
-    "twitch-auth": "4.5.5"
+    "saslprep": "^1.0.3"
   }
 }
