--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@twurple/auth": "^5.0.9",
     "axios": "^0.24.0",
     "discord.js": "^12.5.3",
-    "mongodb": "^3.7.3",
+    "matter-js": "^0.17.1",
+    "mongodb": "^4.2.2",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "saslprep": "^1.0.3"
+    "saslprep": "^1.0.3",
+    "tmi.js": "^1.8.5"
   }
 }
