--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "export": "next export"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "@twurple/api": "^5.0.9",
     "@twurple/auth": "^5.0.9",
     "axios": "^0.24.0",
@@ -19,5 +23,8 @@
     "react-dom": "^17.0.2",
     "saslprep": "^1.0.3",
     "tmi.js": "^1.8.5"
+  },
+  "devDependencies": {
+    "prisma": "^4.2.1"
   }
 }
