--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@twurple/api": "^5.2.3",
     "@twurple/auth": "^5.2.3",
     "axios": "^0.24.0",
+    "discord-interactions": "^3.2.0",
     "matter-js": "^0.17.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
